# xproperty

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt
docs/: environment.yml
docs/source/: index.rst
include/xproperty/: any.hpp  xobserved.hpp  xproperty.hpp
test/: CMakeLists.txt  test_xobserved.cpp
